--- a/src/styles/thumbnailer.css
+++ b/src/styles/thumbnailer.css
@@ -1,6 +1,8 @@
 .img-viewer > img {
   opacity: 75%;
   transition: 0.2s;
+  max-width: min(512px, 100%);
+  object-fit: contain;
 }
 
 .img-viewer > img:hover {
@@ -18,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
+  z-index: 100;
 }
 
 .img-viewer-container > img {
